# local-agent-builder

./: .gitignore  AGENTS.md  EXAMPLE_PROMPTS.txt  README.md
skills/agent_tui_scaffolder/: SKILL.md
skills/agent_tui_scaffolder/examples/basic-tui-agent/: README.md
skills/agent_tui_scaffolder/examples/basic-tui-agent/src/: chat.py  config.py  main.py  prompts.py
skills/agent_tui_scaffolder/examples/basic-tui-agent/src/tools/: __init__.py  core.py  fs.py  web.py
skills/agent_tui_scaffolder/resources/docs/: ARCHITECTURE.md  IMPLEMENTATION.md  PROMPTING.md  TOOLS.md  UI_GUIDELINES.md
skills/local-agent-builder/: SKILL.md
skills/local-agent-builder/examples/basic-tui-agent/: README.md  pyproject.toml  requirements.txt  scratch.py
skills/local-agent-builder/examples/basic-tui-agent/eval/: dataset.jsonl  evaluate.py  results_viewer.py
skills/local-agent-builder/examples/basic-tui-agent/src/: app.py  chat.py  config.py  config_template.yaml  main.py  prompts.py
skills/local-agent-builder/examples/basic-tui-agent/src/engine/: orchestrator.py  sdk.py  tui.py
skills/local-agent-builder/examples/basic-tui-agent/src/tools/: __init__.py  core.py  fs.py  meta.py  rag.py  shell.py  todos.py  web.py
skills/local-agent-builder/examples/basic-tui-agent/src/utils/: vectorstore.py
skills/local-agent-builder/resources/docs/: ARCHITECTURE.md  CHECKLIST.md  CODING_GUIDELINES.md  EVALUATION.md  IMPLEMENTATION.md  MAILBOX.md  PROMPTING.md  RAG.md  SHELL.md  TOOLS.md  UI_GUIDELINES.md
