[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent-app"
version = "0.1.0"
description = "A locally optimized AI coding agent workflow."
authors = [{name = "Local Agent Builder"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework",
    "python-dotenv",
    "httpx",
    "textual",
    "beautifulsoup4",
    "PyYAML",
    "pyfiglet",
    "ddgs",
    "markitdown[all]",
    "textual-serve"
]

[project.scripts]
local-agent = "src.app:cli_main"

[tool.setuptools]
packages = [
    "src",
    "src.tools",
    "src.engine",
    "src.utils"
]
